改造为使用原生 esm，修改说明

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ body {
     max-width: 30em;
 }
 
-.container button {
+.action-btn {
     -webkit-appearance: none;
     appearance: none;
     border: 0;
@@ -59,6 +59,11 @@ body {
     font-weight: bold;
     border-radius: 0.4em;
     background-color: #e8e8e8;
+    cursor: pointer;
+}
+
+.action-btn + .action-btn {
+    margin-inline-start: 1rem;
 }
 
 /* https://github.com/tholman/github-corners */
