强调字体颜色

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,6 +59,7 @@ body {
     font-weight: bold;
     border-radius: 0.4em;
     background-color: #e8e8e8;
+    color: #111;
     cursor: pointer;
 }
 
